--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <header>
             <div class="header-contents">
                 <div class="shopart-logo">
-                    <img src="./styles/media/logos/Rectangle 8 (2).jpg" alt="">
+                    <img src="./styles/media/logos/fusion-mart-logo.svg" alt="">
 
                 </div>
 
