--- a/html-pages/order-summary.html
+++ b/html-pages/order-summary.html
@@ -23,8 +23,8 @@
         <!-- Header -->
         <header>
             <div class="header-contents">
-                <div class="shopart-logo">
-                    <img src="../styles/media/logos/Rectangle 8 (2).jpg" alt="">
+                <div class="shopcart-logo">
+                    <img src="../styles/media/logos/fusion-mart-logo.svg" alt="">
 
                 </div>
 
@@ -32,7 +32,7 @@
                 <ul class=" role-nav">
 
                     <li>
-                        <a class=" Category-text" href="#">Category
+                        <a class="  nav-tabs-head nav-header" href="#">Category
                             <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor"
                                 class="bi bi-caret-down-fill" viewBox="0 0 16 16">
                                 <path
@@ -40,13 +40,14 @@
                             </svg>
                         </a>
 
-                        <ul class="dropdown-menu secondary-dropdown">
+                        <!-- category-dropdown-menu-->
+                        <ul class="dropdown-menu category-dropdown-menu">
                             <li class="dropdown-head-container">
                                 <div class="dropdown-head">Popular Categories</div>
                             </li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-1.jpg" alt="">
+                            <li><a class=" nav-tabs-head  dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/furniture-img.JPG" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Furniture</span>
@@ -54,45 +55,45 @@
                                     </div>
 
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-2.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/handbag-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Hand Bag</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-3.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/shoe-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Shoe</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-5.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/headphone-pic.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Headphone</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-6.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/laptop-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Laptop</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-7.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/book-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Book</span>
@@ -102,14 +103,14 @@
 
                         </ul>
                     </li>
-                    <li class="">
-                        <a class=" Category-text disabled" href="#">Deals</a>
+                    <li>
+                        <a class="  nav-tabs-head nav-header disabled" href="#">Deals</a>
                     </li>
-                    <li class="">
-                        <a class=" Category-text disabled" href="#">What's New</a>
+                    <li>
+                        <a class="  nav-tabs-head nav-header disabled" href="#">What's New</a>
                     </li>
-                    <li class="">
-                        <a class=" Category-text disabled" href="#">Delivery</a>
+                    <li>
+                        <a class="  nav-tabs-head nav-header disabled" href="#">Delivery</a>
                     </li>
                 </ul>
 
@@ -166,8 +167,8 @@
 
                 <ul class=" role-nav mobile-view-nav">
 
-                    <li class="">
-                        <a class=" Category-text  menu-name" href="#">Category
+                    <li>
+                        <a class="  nav-tabs-head  menu-name" href="#">Category
                             <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor"
                                 class="bi bi-caret-down-fill" viewBox="0 0 16 16">
                                 <path
@@ -176,12 +177,12 @@
 
                         </a>
                         <ul class=" secondary-dropdown  dropdown mobile-view-dropdown  ">
-                            <li class="dropdown-head-container Category-title">
+                            <li class="dropdown-head-container">
                                 <div class="dropdown-head">Popular Categories</div>
                             </li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-1.jpg" alt="">
+                            <li><a class=" nav-tabs-head  dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/furniture-img.JPG" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Furniture</span>
@@ -189,45 +190,45 @@
                                     </div>
 
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-2.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/handbag-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Hand Bag</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-3.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/shoe-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Shoe</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-5.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/headphone-pic.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Headphone</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-6.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/laptop-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Laptop</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-7.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/book-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Book</span>
@@ -241,13 +242,13 @@
                     </li>
 
                     <li class="">
-                        <a class=" Category-text  menu-name disabled" href="#">Deals</a>
+                        <a class="  nav-tabs-head  menu-name disabled" href="#">Deals</a>
                     </li>
                     <li class="">
-                        <a class=" Category-text  menu-name disabled" href="#">What's New</a>
+                        <a class="  nav-tabs-head  menu-name disabled" href="#">What's New</a>
                     </li>
                     <li class="">
-                        <a class=" Category-text  menu-name disabled" href="#">Delivery</a>
+                        <a class="  nav-tabs-head  menu-name disabled" href="#">Delivery</a>
                     </li>
                 </ul>
             </div>
