--- a/html-pages/product-details-page.html
+++ b/html-pages/product-details-page.html
@@ -24,8 +24,8 @@
         <!-- Header -->
         <header>
             <div class="header-contents">
-                <div class="shopart-logo">
-                    <img src="../styles/media/logos/Rectangle 8 (2).jpg" alt="">
+                <div class="shopcart-logo">
+                    <img src="../styles/media/logos/fusion-mart-logo.svg" alt="">
 
                 </div>
 
@@ -33,22 +33,22 @@
                 <!-- nav tabs -->
                 <ul class=" role-nav">
 
-                    <li class="">
-                        <a class=" Category-text" href="#">Category
+                    <li>
+                        <a class="nav-tabs-head nav-header" href="#">Category
                             <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor"
                                 class="bi bi-caret-down-fill" viewBox="0 0 16 16">
                                 <path
                                     d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
                             </svg>
                         </a>
-
-                        <ul class="dropdown-menu secondary-dropdown">
+                        <!-- category-dropdown-menu -->
+                        <ul class="dropdown-menu category-dropdown-menu">
                             <li class="dropdown-head-container">
                                 <div class="dropdown-head">Popular Categories</div>
                             </li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-1.jpg" alt="">
+                            <li><a class=" nav-tabs-head  dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/furniture-img.JPG" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Furniture</span>
@@ -56,45 +56,45 @@
                                     </div>
 
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-2.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/handbag-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Hand Bag</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-3.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/shoe-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Shoe</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-5.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/headphone-pic.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Headphone</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-6.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/laptop-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Laptop</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-7.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/book-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Book</span>
@@ -104,14 +104,14 @@
 
                         </ul>
                     </li>
-                    <li class="">
-                        <a class=" Category-text disabled" href="#">Deals</a>
+                    <li>
+                        <a class="nav-tabs-head nav-header disabled" href="#">Deals</a>
                     </li>
-                    <li class="">
-                        <a class=" Category-text disabled" href="#">What's New</a>
+                    <li>
+                        <a class="nav-tabs-head nav-header disabled" href="#">What's New</a>
                     </li>
-                    <li class="">
-                        <a class=" Category-text disabled" href="#">Delivery</a>
+                    <li>
+                        <a class="nav-tabs-head nav-header disabled" href="#">Delivery</a>
                     </li>
                 </ul>
 
@@ -169,8 +169,8 @@
 
                 <ul class=" role-nav mobile-view-nav">
 
-                    <li class="">
-                        <a class=" Category-text  menu-name" href="#">Category
+                    <li>
+                        <a class=" nav-tabs-head   menu-name" href="#">Category
                             <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor"
                                 class="bi bi-caret-down-fill" viewBox="0 0 16 16">
                                 <path
@@ -179,12 +179,12 @@
 
                         </a>
                         <ul class=" secondary-dropdown  dropdown mobile-view-dropdown  ">
-                            <li class="dropdown-head-container Category-title">
+                            <li class="dropdown-head-container">
                                 <div class="dropdown-head">Popular Categories</div>
                             </li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-1.jpg" alt="">
+                            <li><a class=" nav-tabs-head  dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/furniture-img.JPG" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Furniture</span>
@@ -192,45 +192,45 @@
                                     </div>
 
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-2.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/handbag-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Hand Bag</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-3.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/shoe-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Shoe</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-5.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/headphone-pic.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Headphone</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-6.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/laptop-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Laptop</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-7.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/book-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Book</span>
@@ -243,14 +243,14 @@
 
                     </li>
 
-                    <li class="">
-                        <a class=" Category-text  menu-name disabled" href="#">Deals</a>
+                    <li>
+                        <a class=" nav-tabs-head   menu-name disabled" href="#">Deals</a>
                     </li>
-                    <li class="">
-                        <a class=" Category-text  menu-name disabled" href="#">What's New</a>
+                    <li>
+                        <a class=" nav-tabs-head   menu-name disabled" href="#">What's New</a>
                     </li>
-                    <li class="">
-                        <a class=" Category-text  menu-name disabled" href="#">Delivery</a>
+                    <li>
+                        <a class=" nav-tabs-head   menu-name disabled" href="#">Delivery</a>
                     </li>
                 </ul>
 
@@ -483,8 +483,8 @@
             <div class="index-footer-container">
                 <div class="index-footer">
                     <div class="footer-col1">
-                        <div class=" shopart-logo  m-b-32">
-                            <img src="../styles/media/logos/Rectangle 8 (2).jpg" alt="">
+                        <div class=" shopcart-logo  m-b-32">
+                            <img src="../styles/media/logos/fusion-mart-logo.svg" alt="">
 
                         </div>
                         <p class="m-b-40">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo nobis eligendi
