--- a/html-pages/product-list-page.html
+++ b/html-pages/product-list-page.html
@@ -65,8 +65,8 @@
         <!-- Header -->
         <header>
             <div class="header-contents">
-                <div class="shopart-logo">
-                    <img src="../styles/media/logos/Rectangle 8 (2).jpg" alt="">
+                <div class="shopcart-logo">
+                    <img src="../styles/media/logos/fusion-mart-logo.svg" alt="">
 
                 </div>
 
@@ -74,7 +74,7 @@
                 <ul class=" role-nav">
 
                     <li>
-                        <a class=" Category-text" href="#">Category
+                        <a class="nav-tabs-head nav-header" href="#">Category
                             <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor"
                                 class="bi bi-caret-down-fill" viewBox="0 0 16 16">
                                 <path
@@ -82,13 +82,14 @@
                             </svg>
                         </a>
 
-                        <ul class="dropdown-menu secondary-dropdown">
+                        <!-- category-dropdown-menu -->
+                        <ul class="dropdown-menu category-dropdown-menu">
                             <li class="dropdown-head-container">
                                 <div class="dropdown-head">Popular Categories</div>
                             </li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-1.jpg" alt="">
+                            <li><a class=" nav-tabs-head  dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/furniture-img.JPG" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Furniture</span>
@@ -96,45 +97,45 @@
                                     </div>
 
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-2.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/handbag-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Hand Bag</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-3.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/shoe-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Shoe</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-5.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/headphone-pic.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Headphone</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-6.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/laptop-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Laptop</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-7.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/book-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Book</span>
@@ -144,14 +145,14 @@
 
                         </ul>
                     </li>
-                    <li class="">
-                        <a class=" Category-text disabled" href="#">Deals</a>
+                    <li>
+                        <a class="nav-tabs-head nav-header disabled" href="#">Deals</a>
                     </li>
-                    <li class="">
-                        <a class=" Category-text disabled" href="#">What's New</a>
+                    <li>
+                        <a class="nav-tabs-head nav-header disabled" href="#">What's New</a>
                     </li>
-                    <li class="">
-                        <a class=" Category-text disabled" href="#">Delivery</a>
+                    <li>
+                        <a class="nav-tabs-head nav-header disabled" href="#">Delivery</a>
                     </li>
                 </ul>
 
@@ -208,8 +209,8 @@
 
                 <ul class=" role-nav mobile-view-nav">
 
-                    <li class="">
-                        <a class=" Category-text  menu-name" href="#">Category
+                    <li>
+                        <a class="nav-tabs-head  menu-name" href="#">Category
                             <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor"
                                 class="bi bi-caret-down-fill" viewBox="0 0 16 16">
                                 <path
@@ -217,13 +218,14 @@
                             </svg>
 
                         </a>
+                        <!-- secondary dropdown -->
                         <ul class=" secondary-dropdown  dropdown mobile-view-dropdown  ">
-                            <li class="dropdown-head-container Category-title">
+                            <li class="dropdown-head-container">
                                 <div class="dropdown-head">Popular Categories</div>
                             </li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-1.jpg" alt="">
+                            <li><a class=" nav-tabs-head  dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/furniture-img.JPG" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Furniture</span>
@@ -231,65 +233,64 @@
                                     </div>
 
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-2.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/handbag-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Hand Bag</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-3.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/shoe-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Shoe</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-5.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/headphone-pic.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Headphone</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-6.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/laptop-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Laptop</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-7.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/book-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Book</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-
                         </ul>
 
 
                     </li>
 
-                    <li class="">
-                        <a class=" Category-text  menu-name disabled" href="#">Deals</a>
+                    <li>
+                        <a class="nav-tabs-head   menu-name disabled" href="#">Deals</a>
                     </li>
-                    <li class="">
-                        <a class=" Category-text  menu-name disabled" href="#">What's New</a>
+                    <li>
+                        <a class="nav-tabs-head  menu-name disabled" href="#">What's New</a>
                     </li>
-                    <li class="">
-                        <a class=" Category-text  menu-name disabled" href="#">Delivery</a>
+                    <li>
+                        <a class="nav-tabs-head  menu-name disabled" href="#">Delivery</a>
                     </li>
                 </ul>
 
@@ -497,7 +498,7 @@
                                 </div>
                             </div>
 
-                            <p class="product-content">With Microphone  </p>
+                            <p class="product-content">With Microphone </p>
                             <div class="product-rating">
                                 <div class="product-stars">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#08ac0a"
@@ -650,7 +651,7 @@
                                 </div>
                             </div>
 
-                            <p class="product-content">With Microphone  </p>
+                            <p class="product-content">With Microphone </p>
                             <div class="product-rating">
                                 <div class="product-stars">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#08ac0a"
@@ -715,7 +716,7 @@
 
                         <div class="product-card-content">
                             <div class="product-card-title">
-                                <h6 class="product-name">EKSA E900Pro Gaming Wired   </h6>
+                                <h6 class="product-name">EKSA E900Pro Gaming Wired </h6>
                                 <div class="product-price">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="black"
                                         class="bi bi-currency-dollar" viewBox="0 0 16 16">
@@ -727,7 +728,7 @@
                                 </div>
                             </div>
 
-                            <p class="product-content">With Microphone  </p>
+                            <p class="product-content">With Microphone </p>
                             <div class="product-rating">
                                 <div class="product-stars">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#08ac0a"
@@ -882,7 +883,7 @@
                                 </div>
                             </div>
 
-                            <p class="product-content">With Microphone  </p>
+                            <p class="product-content">With Microphone </p>
                             <div class="product-rating">
                                 <div class="product-stars">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#08ac0a"
@@ -1036,7 +1037,7 @@
                                 </div>
                             </div>
 
-                            <p class="product-content">With Microphone  </p>
+                            <p class="product-content">With Microphone </p>
                             <div class="product-rating">
                                 <div class="product-stars">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#08ac0a"
@@ -1093,8 +1094,8 @@
             <div class="index-footer-container">
                 <div class="index-footer">
                     <div class="footer-col1">
-                        <div class=" shopart-logo  m-b-32">
-                            <img src="../styles/media/logos/Rectangle 8 (2).jpg" alt="">
+                        <div class=" shopcart-logo  m-b-32">
+                            <img src="../styles/media/logos/fusion-mart-logo.svg" alt="">
 
                         </div>
                         <p class="m-b-40">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo nobis eligendi
