--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <!-- Header -->
         <header>
             <div class="header-contents">
-                <div class="shopart-logo">
+                <div class="shopcart-logo">
                     <img src="./styles/media/logos/fusion-mart-logo.svg" alt="">
 
                 </div>
@@ -74,7 +74,7 @@
                 <ul class=" role-nav">
 
                     <li>
-                        <a class=" Category-text" href="#">Category
+                        <a class=" nav-tabs-head nav-header" href="#">Category
                             <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor"
                                 class="bi bi-caret-down-fill" viewBox="0 0 16 16">
                                 <path
@@ -82,13 +82,14 @@
                             </svg>
                         </a>
 
-                        <ul class="dropdown-menu secondary-dropdown">
+                        <!-- category-dropdown-menu -->
+                        <ul class="dropdown-menu category-dropdown-menu">
                             <li class="dropdown-head-container">
                                 <div class="dropdown-head">Popular Categories</div>
                             </li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-1.jpg" alt="">
+                            <li><a class=" nav-tabs-head  dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="./styles/media/images/furniture-img.JPG" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Furniture</span>
@@ -96,45 +97,45 @@
                                     </div>
 
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-2.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="./styles/media/images/handbag-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Hand Bag</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-3.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="./styles/media/images/shoe-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Shoe</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-5.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="./styles/media/images/headphone-pic.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Headphone</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-6.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="./styles/media/images/laptop-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Laptop</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-7.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="./styles/media/images/book-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Book</span>
@@ -144,14 +145,14 @@
 
                         </ul>
                     </li>
-                    <li class="">
-                        <a class=" Category-text disabled" href="#">Deals</a>
+                    <li>
+                        <a class=" nav-tabs-head nav-header disabled" href="#">Deals</a>
                     </li>
-                    <li class="">
-                        <a class=" Category-text disabled" href="#">What's New</a>
+                    <li>
+                        <a class=" nav-tabs-head nav-header disabled" href="#">What's New</a>
                     </li>
-                    <li class="">
-                        <a class=" Category-text disabled" href="#">Delivery</a>
+                    <li>
+                        <a class=" nav-tabs-head nav-header disabled" href="#">Delivery</a>
                     </li>
                 </ul>
 
@@ -213,7 +214,7 @@
                 <ul class=" role-nav mobile-view-nav">
 
                     <li class="">
-                        <a class=" Category-text  menu-name" href="#">Category
+                        <a class=" nav-tabs-head  menu-name" href="#">Category
                             <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor"
                                 class="bi bi-caret-down-fill" viewBox="0 0 16 16">
                                 <path
@@ -222,12 +223,12 @@
 
                         </a>
                         <ul class=" secondary-dropdown  dropdown mobile-view-dropdown  ">
-                            <li class="dropdown-head-container Category-title">
+                            <li class="dropdown-head-container">
                                 <div class="dropdown-head">Popular Categories</div>
                             </li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-1.jpg" alt="">
+                            <li><a class=" nav-tabs-head  dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/furniture-img.JPG" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Furniture</span>
@@ -235,45 +236,45 @@
                                     </div>
 
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-2.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/handbag-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Hand Bag</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-3.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/shoe-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Shoe</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-5.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/headphone-pic.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Headphone</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-6.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/laptop-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Laptop</span>
                                         <p>250 Items Available</p>
                                     </div>
                                 </a></li>
-                            <li><a class=" Category-text dropdown-list" href="#">
-                                    <div>
-                                        <img src="./styles/media/images/furniture-7.jpg" alt="">
+                            <li><a class=" nav-tabs-head dropdown-list" href="#">
+                                    <div class="nav-img-container">
+                                        <img src="../styles/media/images/book-img.jpg" alt="">
                                     </div>
                                     <div class="Category-link-content">
                                         <span>Book</span>
@@ -287,13 +288,13 @@
                     </li>
 
                     <li class="">
-                        <a class=" Category-text  menu-name disabled" href="#">Deals</a>
+                        <a class=" nav-tabs-head  menu-name disabled" href="#">Deals</a>
                     </li>
                     <li class="">
-                        <a class=" Category-text  menu-name disabled" href="#">What's New</a>
+                        <a class=" nav-tabs-head  menu-name disabled" href="#">What's New</a>
                     </li>
                     <li class="">
-                        <a class=" Category-text  menu-name disabled" href="#">Delivery</a>
+                        <a class=" nav-tabs-head  menu-name disabled" href="#">Delivery</a>
                     </li>
                 </ul>
 
@@ -348,25 +349,25 @@
                     <div class="shop-categ-card">
                         <img src="./styles/media/images/books.jpg" alt="">
 
-                        <p>Hand Bag</p>
+                        <p>Books</p>
 
                     </div>
                     <div class="shop-categ-card">
                         <img src="./styles/media/images/laptop.jpg" alt="">
 
-                        <p>Hand Bag</p>
+                        <p>Laptop </p>
 
                     </div>
                     <div class="shop-categ-card">
                         <img src="./styles/media/images/shoe.jpg" alt="">
 
-                        <p>Hand Bag</p>
+                        <p>Shoes </p>
 
                     </div>
                     <div class="shop-categ-card">
                         <img src="./styles/media/images/travel-bag.jpg" alt="">
 
-                        <p>Hand Bag</p>
+                        <p>Traving Bag</p>
 
                     </div>
 
@@ -513,8 +514,8 @@
             <div class="index-footer-container">
                 <div class="index-footer">
                     <div class="footer-col1">
-                        <div class=" shopart-logo  m-b-32">
-                            <img src="../styles/media/logos/Rectangle 8 (2).jpg" alt="">
+                        <div class=" shopcart-logo  m-b-32">
+                            <img src="./styles/media/logos/fusion-mart-logo.svg" alt="">
 
                         </div>
                         <p class="m-b-40">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo nobis eligendi
